# llm-eval

./: .gitignore  .gitmodules  README.md  plan.md  pyproject.toml
config/: cluster.yaml  models.yaml  tasks.yaml
data/knowledge/bbh/: bbh_cot_prompts.json
data/knowledge/mmlu/: mmlu_pro_fewshot.json  mmlu_prompts.json
src/llmeval/application/: aggregate_results.py  monitor_jobs.py  submit_evaluation.py
src/llmeval/benchmarks/: base.py
src/llmeval/benchmarks/code/: code_executor.py  humaneval.py  mbpp.py
src/llmeval/benchmarks/knowledge/: answer_extractor.py  bbh.py  gpqa.py  ifeval.py  mmlu.py  mmlu_flan.py  mmlu_pro.py
src/llmeval/benchmarks/likelihood/: likelihood_tasks.py
src/llmeval/benchmarks/math/: answer_extractor.py  gsm8k.py  math500.py  qwen_math_grader.py
src/llmeval/domain/: benchmark.py  eval_job.py  eval_result.py  model.py  sampling_config.py
src/llmeval/infrastructure/: config_loader.py  result_store.py
src/llmeval/infrastructure/slurm/: job_monitor.py  job_submitter.py
src/llmeval/infrastructure/slurm/templates/: slurm_job.sh.j2
src/llmeval/infrastructure/vllm/: inference_runner.py
src/llmeval/interfaces/cli/: parse_lm_harness.py  run_job.py  submit.py
tests/: conftest.py
